# LumenQuest

./: .prettierignore  .prettierrc  App.tsx  README.md  tsconfig.json
backend/: README.md  package.json  pyproject.toml  requirements.txt  template.env
backend/alembic/: env.py
backend/alembic/versions/2026/06/: 24_1241_14_6ed04286f7f9_initial_checkup.py
backend/app/: main.py
backend/app/core/config/: config.py
backend/app/core/database/: async_session.py  connection.py  dependency.py  module_registry.py
backend/app/modules/discover/: bible_client.py  routes.py  schema.py
backend/prisma/: schema.prisma
backend/prisma/migrations/20260111062310_user_auth/: migration.sql
backend/src/: app.ts  server.ts
backend/src/middlewares/: appError.middleware.ts  errorHandler.middleare.ts
backend/src/modules/auth/controllers/: resetPassword.controller.ts  signin.controller.ts  signup.controller.ts  verifyMagicEmail.controller.ts
backend/src/modules/auth/emails/: signupMagicLinkEmail.email.tsx
backend/src/modules/auth/routes/: auth.routes.ts
backend/src/modules/auth/services/: magicEmail.service.ts  signup.service.ts
backend/src/modules/auth/validations/: signup.validation.ts
backend/src/utils/: generateStrongPassword.ts
lumenquest/: .gitignore  app.json  package.json  prettierignore  prettierrc  template.env
lumenquest/src/api/: client.ts
lumenquest/src/app/: _layout.tsx  bookDetails.tsx  index.tsx  readerEngine.tsx
lumenquest/src/components/: SearchBox.tsx  card.tsx
lumenquest/src/constants/: theme.ts  typograpahy.ts
(+10 files in other folders)
