[project]
name = "backend"
version = "0.1.0"
description = "A Backend Server that handles all api calls from lumenquest mobile app and ai."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "fastapi[all]>=0.138.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "sentry-sdk>=2.63.0",
    "sqlalchemy>=2.0.51",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1", # black .  black --check . 
]
