[project]
name = "backend"
version = "0.1.0"
description = "A Backend Server that handles all api calls from lumenquest mobile app and ai."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aioboto3>=15.5.0",
    "alembic>=1.18.4",
    "asyncio>=4.0.0",
    "asyncpg>=0.31.0",
    "fastapi[all]>=0.138.0",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "sentry-sdk>=2.63.0",
    "sqlalchemy>=2.0.51",
    "sqlmodel>=0.0.38",
    "types-aioboto3[s3]>=15.5.0",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1", # black .  black --check . 
]
